--- a/package.json
+++ b/package.json
@@ -18,24 +18,27 @@
     "react-admin": "^5.7.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.3",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "ra-data-json-server": "^5.7.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
+    "@typescript-eslint/parser": "8.29.0",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@types/node": "^20.10.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.5",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.0.0",
     "prettier": "^3.3.3",
     "typescript": "^5.1.6",
-    "typescript-eslint": "^8.28.0",
-    "vite": "^5.3.5"
+    "vite": "^5.3.5",
+    "@eslint/js": "^9.23.0",
+    "eslint-plugin-prettier": "^5.2.5",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.28.0"
   },
   "name": "react-admin-demo"
 }
